kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-flask
  name: api-flask
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-flask
  template:
    metadata:
      labels:
        app: api-flask
    spec:
      containers:
      - image: api-flask:latest
        name: api-flask
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 80
        readinessProbe:
          httpGet:
            path: /health
            port: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          # limits:
          #   cpu: 200m
          #   memory: 256Mi
