kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-flask
  name: api-flask
spec:
  ports:
  - port: 80
  selector:
    app: api-flask
